Fix hero section height when scroll is visible

--- a/src/core/static/styles/components/_hero-section.scss
+++ b/src/core/static/styles/components/_hero-section.scss
@@ -8,7 +8,7 @@
 
   @include bp-mediumup {
     flex: 0 1 50%;
-    height: 100vh;
+    min-height: 100vh;
   }
 
   > .logo {
